# statistics_api

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
dao/: Cargo.toml
dao/src/: lib.rs
docker/: jaeger.yaml  jaegertracing.yaml  postgres.yaml  telemetry.yaml
docker/config/: loki-config.yaml  prometheus.yaml  promtail-config.yaml
k6/: '  output.json  test_municipality_add.k6  test_municipality_delete.k6  test_municipality_list.k6  test_statistics_add.k6  test_statistics_delete.k6  test_statistics_list.k6  test_values_add.k6  test_values_delete.k6  test_values_list.k6  test_values_update.k6
service/: Cargo.toml
sqlx-postgresql-migration/: .env.prod
sqlx-postgresql-migration/migrations/: 20250723195839_init.down.sql  20250723195839_init.up.sql  20250729204021_update.sql  20250729205220_data.sql
src/: main.rs
src/api/: endpoints.rs  httpsignatures.rs  middleware.rs  mod.rs  rest.rs  security.rs  state.rs
src/dao/: statistics.rs
src/model/: apperror.rs  config.rs  db.rs  mod.rs  models.rs
src/service/: statistics.rs
test_config/: logfile.yaml  postgres.yaml  private_key.pem  public_key.pem  simple_http.toml  simple_http_signatures.toml
test_config/keys/: private_key1.pem  private_key1.pk8  private_key2.pem  private_key2.pk8  private_key4.pem  private_key4.pk8  private_key5.pem  private_key5.pk8  private_key6.pem  private_key6.pk8  public_key1.der  public_key1.pem  public_key2.der  public_key2.pem  public_key4.der  public_key4.pem  public_key5.pem  public_key6.pem  readme
test_keys/: rsa_pkcs1_private.der  rsa_pss_private.pk8
