[package]
name = "statistics_api"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"]}
rustls = { version = "0.23.29" }
rustls-pemfile = "2.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "rust_decimal", "chrono" ] }
rust_decimal = "1.37.2"
prometheus = "0.14.0" #For prometheus monitoring
actix-web-prom = { version = "0.10.0", features = ["process"]} #For prometheus monitoring

[profile.release]
lto = true  # Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
strip = "none"  # Do not strip debug symbols.
opt-level = 3  # Optimize for speed.


[profile.dev]
lto = false  # No link-time optimization in development builds.
strip = "none"  # Do not strip debug symbols.
opt-level = 0  # No optimizations in development builds.
