[package]
name = "statistics_api"
version = "0.0.1"
edition = "2024"    
description = "API for statistics"
authors = ["Kjetil Fjellheim <kjetil@forgottendonkey.net>"]


[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] } # For web server functionality
actix-web-httpauth = "0.8.2" # For HTTP authentication
base64 = "0.22.1" # For base64 encoding/decoding
tokio = { version = "1.46.1", features = ["full"] } # For async runtime
serde = { version = "1.0.219", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0.141" # For JSON serialization/deserialization
futures-util = "0.3.31" # For async utilities
jsonwebtoken = "9.3.1" # For JWT handling
toml = "0.9.2" # For reading configuration files
clap = { version = "4.5.41", features = ["derive"]} # For command line argument parsing
rustls = { version = "0.23.29" } # For TLS support
rustls-pemfile = "2.2.0" # For handling PEM files
chrono = { version = "0.4.41", features = ["serde"] } # For date and time handling
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "rust_decimal", "chrono" ] } # For PostgreSQL support with SQLx
rust_decimal = "1.37.2" # For decimal support in SQLx
prometheus = "0.14.0" #For prometheus monitoring
actix-web-prom = { version = "0.10.0", features = ["process"]} #For prometheus monitoring
log4rs = { version = "1.3.0", features = ["rolling_file_appender", "compound_policy", "time_trigger"] } # For logging
tracing = "0.1.41" # For structured logging
log = "0.4.27" # For logging

[profile.release]
lto = true  # Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
strip = "none"  # Do not strip debug symbols.
opt-level = 3  # Optimize for speed.


[profile.dev]
lto = false  # No link-time optimization in development builds.
strip = "none"  # Do not strip debug symbols.
opt-level = 0  # No optimizations in development builds.
