[package]
name = "statistics_api"
version = "0.0.1"
edition = "2024"    
description = "API for statistics"
authors = ["Kjetil Fjellheim <kjetil@forgottendonkey.net>"]


[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"] } # For web server functionality
actix-web-httpauth = "0.8.2" # For HTTP authentication
base64 = "0.22.1" # For base64 encoding/decoding
tokio = { version = "1.47.1", features = ["full"] } # For async runtime
serde = { version = "1.0.219", features = ["derive"] } # For serialization/deserialization
serde_json = "1.0.142" # For JSON serialization/deserialization
futures-util = "0.3.31" # For async utilities
jsonwebtoken = "9.3.1" # For JWT handling
toml = "0.9.5" # For reading configuration files
clap = { version = "4.5.45", features = ["derive"]} # For command line argument parsing
rustls = { version = "0.23.31", features = [] } # For TLS support
rustls-pemfile = "2.2.0" # For handling PEM files
chrono = { version = "0.4.41", features = ["serde"] } # For date and time handling
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "rust_decimal", "chrono", "migrate" ] } # For PostgreSQL support with SQLx
rust_decimal = "1.37.2" # For decimal support in SQLx
prometheus = "0.14.0" #For prometheus monitoring
actix-web-prom = { version = "0.10.0", features = ["process"]} #For prometheus monitoring
tracing = "0.1.41" # For structured logging
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] } # For tracing subscriber
uuid = { version = "1.18.0", features = ["v4"] } # For generating unique identifiers when trace id is missing.
sha2 = "0.10.9" # For SHA-256 hashing
openssl = { version = "0.10.73", features = ["vendored"] } # For OpenSSL support in tests
hmac = { version = "0.12.1" } # HMAC support

[dev-dependencies]
dotenv = "0.15.0" # For loading environment variables from a .env file
rustls-pki-types = "1.12.0" # For PKI types in Rustls
pem = "3.0.5" # For PEM file handling
ring = { version = "0.17.11", features = [ ]} # Signature verification library


[profile.release]
lto = true  # Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
strip = "none"  # Do not strip debug symbols.
opt-level = 3  # Optimize for speed.


[profile.dev]
lto = false  # No link-time optimization in development builds.
strip = "none"  # Do not strip debug symbols.
opt-level = 0  # No optimizations in development builds.

[features]
integration-test = []  # Feature for local development, enabling integration tests and local database connections.